migrated API classes to .NET standard

--- a/Mercury/Mercury.csproj
+++ b/Mercury/Mercury.csproj
@@ -157,7 +157,12 @@
       <Version>1.0.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\APIv2\API.csproj">
+      <Project>{c33c6ac2-5e27-4034-9d4a-aaabd7fe316f}</Project>
+      <Name>API</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
